--- a/estilos.css
+++ b/estilos.css
@@ -108,21 +108,21 @@ iframe{
     margin-bottom: 5%;
 }
 
-.contenedorSlider{
-    height: 100vh;
-}
-
 .headerLogo{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.slider {
-	overflow: hidden;
+.carousel-inner{
+    height: 90vh;
 }
 
-.slider figure {
+/* .slider {
+	overflow: hidden;
+} */
+
+/* .slider figure {
 	width: 300%;
 	position: relative;
 	animation: 10s slider infinite;
@@ -132,7 +132,7 @@ iframe{
 .slider figure img {
 	width: 33.333333333%;
 	height : 75vh;
-}
+} */
 
 .botones{
     text-align: center;
@@ -326,7 +326,7 @@ iframe{
     color: #ffc700;    
 }
 
-@keyframes slider {
+/* @keyframes slider {
 	0% { left: 0; }
 	30% { left: 0; }
 	33% { left: -100%; }
@@ -334,7 +334,7 @@ iframe{
 	66% { left: -200%; }
 	95% { left: -200%; }
 	100% { left: 0; }
-}
+} */
 
 @media screen and (max-width: 1140px){
     
