--- a/estilos.css
+++ b/estilos.css
@@ -20,6 +20,10 @@ header{
     padding: 1% 15%;
 }
 
+header a{
+    font-weight: bold;
+}
+
 nav ul{
     margin-bottom: 0%;
 }
@@ -27,8 +31,11 @@ nav ul{
 ul li{
     display: inline;
     list-style: none;
-    padding: 0em 0em 0em 2em;
-    font-weight: bold;
+    padding: 0em 0em 0em 1.5em;
+}
+
+ul{
+    margin-left: 0%;
 }
 
 aside ul{
@@ -52,9 +59,19 @@ a{
     font-size: 1em;
 }
 
+a h3{
+    font-size: 1em;
+}
+
 article a img{
     width: 100%;
     border-radius: 5%;
+    margin-bottom: 5%;
+}
+
+article a p{
+    font-size: 0.9em;
+    font-style: italic;
 }
 
 footer{
@@ -66,6 +83,10 @@ footer{
 footer h2{
     font-size: 1.5em;
     font-weight: bold;
+}
+
+ul{
+    padding-left: 0%;
 }
 
 h1{
@@ -82,16 +103,13 @@ h2{
 
 h3{
     font-size: 1.5em;
+    text-decoration: none;
+    color: #000
 }
 
-a{
+p{
     text-decoration: none;
     color: #000;
-    font-size: 1em;
-}
-
-a h3{
-    font-size: 1em;
 }
 
 form{
@@ -132,26 +150,6 @@ iframe{
     align-items: center;
 }
 
-.carousel-inner{
-    height: 90vh;
-}
-
-/* .slider {
-	overflow: hidden;
-} */
-
-/* .slider figure {
-	width: 300%;
-	position: relative;
-	animation: 10s slider infinite;
-    display: flex;
-}
-
-.slider figure img {
-	width: 33.333333333%;
-	height : 75vh;
-} */
-
 .botones{
     text-align: center;
     margin: 1%;
@@ -188,11 +186,14 @@ iframe{
 }
 
 .recomendado{
+    color: #000;
     background-color: #fff;
     width: 100%;
     border: 1px solid #fff;
     font-size: 1em;
     padding-bottom: 3%;
+    border-bottom: 3px solid transparent;
+    animation-duration: 0.8s;
 }
 
 .boton{
@@ -221,7 +222,7 @@ iframe{
 .seccionInfo{
     display: flex;
     padding: 0em 3em 2em 0em; 
-    font-size: 1.8em;
+    font-size: 1.6em;
 }
 
 .centradoDerecha{
@@ -287,6 +288,17 @@ iframe{
 
 .mapa{
     grid-area: mapa;
+}
+
+.contenedorCarrusel{
+    display: flex;
+    justify-content: center;
+    margin: 0% 15% 0% 15%;
+}
+
+.imagenSlide{
+    height: 100%;
+    width: 100%;
 }
 
 .estrellas{
@@ -358,15 +370,21 @@ iframe{
     color: #ffc700;    
 }
 
-/* @keyframes slider {
-	0% { left: 0; }
-	30% { left: 0; }
-	33% { left: -100%; }
-	63% { left: -100%; }
-	66% { left: -200%; }
-	95% { left: -200%; }
-	100% { left: 0; }
-} */
+header a:hover{
+    color: #B08074;
+}
+
+article h3:hover{
+    color: #000;
+}
+
+article p:hover{
+    color: #000;
+}
+
+.recomendado:hover{
+    border-bottom: 3px solid #B08074;
+}
 
 @media screen and (max-width: 1140px){
     
@@ -405,9 +423,9 @@ iframe{
 
 @media screen and (max-width: 1022px){
 
-    header{
+    /* header{
         flex-direction: column;
-    }
+    } */
 
     iframe{
         height: 270px;
