--- a/estilos.css
+++ b/estilos.css
@@ -122,7 +122,7 @@ form input{
     margin-bottom: 2%;
     font-family: 'Nunito';
     font-size: 1em;
-    border: 2px solid #000;
+    border: 1px solid #ccc;
     border-radius: 0.5em;
 }
 
@@ -133,7 +133,7 @@ form textarea{
     margin-bottom: 1%;
     font-family: 'Nunito';
     font-size: 1em;
-    border: 2px solid #000;
+    border: 1px solid #ccc;
     border-radius: 0.5em;
 }
 
@@ -288,17 +288,6 @@ iframe{
 
 .mapa{
     grid-area: mapa;
-}
-
-.contenedorCarrusel{
-    display: flex;
-    justify-content: center;
-    margin: 0% 15% 0% 15%;
-}
-
-.imagenSlide{
-    height: 100%;
-    width: 100%;
 }
 
 .estrellas{
