--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,9 @@
 $blanco: #fff;
 $negro: #000;
 $gris: #ccc;
-$rosaFondo: #EBCFB8;
-$rosa: #B08074; 
+$claro: #EBCFB8;
+$oscuro: #B08074; 
+$claroAcentuado: #ffefe2;
 
 //fuente
 $fuente: 'Nunito';
