--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap");
 * {
   margin: 0%;
   padding: 0%;
@@ -11,11 +13,12 @@ ul {
   padding-left: 0%; }
   ul li {
     display: inline;
-    list-style: none;
-    padding: 0em 0em 0em 1.5em; }
+    list-style: none; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #000;
+  font-size: 1em; }
   a h3 {
     font-size: 1em; }
 
@@ -38,6 +41,40 @@ p {
   text-decoration: none;
   color: #000; }
 
+.botones {
+  text-align: center;
+  margin: 1%; }
+  .botones li {
+    display: inline-block; }
+    .botones li a {
+      display: inline-block;
+      background-color: #ccc;
+      padding: 2%;
+      width: 20px;
+      height: 20px;
+      border-radius: 100%; }
+
+.cuerpo {
+  margin: 2% 15%; }
+  .cuerpo h2 {
+    animation-duration: 3s; }
+
+.boton {
+  padding: 1em 2em;
+  margin-top: 1%;
+  font-size: 1em;
+  border: 2px solid #B08074;
+  border-radius: 0.5em;
+  background-color: #ffefe2;
+  color: #B08074;
+  font-weight: bold; }
+
+.tituloCentrado {
+  text-align: center; }
+
+.textoPaddingBottom {
+  padding: 0em 0em 1em 0em; }
+
 header {
   width: 100%;
   background-color: #EBCFB8;
@@ -48,6 +85,13 @@ header {
   padding: 1% 15%; }
   header a {
     font-weight: bold; }
+  header a:hover {
+    color: #B08074; }
+
+.headerLogo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 nav ul {
   margin-bottom: 0%; }
@@ -60,6 +104,49 @@ article a img {
 article a p {
   font-size: 0.9em;
   font-style: italic; }
+
+article h3 :hover {
+  color: #000; }
+
+article p :hover {
+  color: #000; }
+
+.catalogo {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  justify-items: center;
+  gap: 2%;
+  margin: 3% 0% 2% 0%; }
+
+.recomendado {
+  color: #000;
+  background-color: #fff;
+  width: 100%;
+  border: 1px solid #fff;
+  font-size: 1em;
+  padding-bottom: 3%;
+  border-bottom: 3px solid transparent;
+  animation-duration: 0.8s; }
+  .recomendado:hover {
+    border-bottom: 3px solid #B08074; }
+
+.seccionInfo {
+  display: flex;
+  font-size: 1.6em;
+  margin-bottom: 5%; }
+
+.centradoDerecha {
+  text-align: right;
+  padding-left: 10%; }
+
+.centradoIzquierda {
+  text-align: left;
+  padding-right: 10%; }
+
+.borde {
+  background-color: #B08074;
+  width: 5%; }
 
 aside ul li {
   padding: 0em; }
@@ -92,6 +179,94 @@ iframe {
   border: 1px solid #EBCFB8;
   margin-bottom: 5%; }
 
+.cajaEstrellas {
+  display: flex;
+  flex-direction: row;
+  padding-right: 5%; }
+  .cajaEstrellas section {
+    padding-right: 3%; }
+
+.nombreCliente {
+  font-weight: bold;
+  font-style: normal; }
+
+.ubicacion {
+  display: grid;
+  grid-template-areas: "ubicacion mapa" "contactos mapa";
+  grid-template-columns: 60% 40%;
+  margin-bottom: 5%; }
+
+.ubicacionDireccion {
+  padding-right: 10%; }
+
+.contacto {
+  display: flex;
+  align-items: center;
+  margin-top: 3%;
+  padding-right: 10%; }
+  .contacto p {
+    margin-bottom: 0%;
+    padding-left: 3%; }
+
+.contactos {
+  grid-area: contactos;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3%;
+  padding-right: 10%; }
+  .contactos h3 {
+    font-size: 1.2em; }
+
+.mapa {
+  grid-area: mapa; }
+
+.estrellas {
+  display: inline-block;
+  margin-top: 1%; }
+  .estrellas:not(:checked) > input {
+    position: absolute;
+    top: -9999px; }
+  .estrellas:not(:checked) > label {
+    float: right;
+    width: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: 1.5em;
+    color: #ccc; }
+  .estrellas:not(:checked) > label:before {
+    content: '★ '; }
+  .estrellas > input:checked ~ label {
+    color: #ffc700; }
+  .estrellas:not(:checked) > label:hover,
+  .estrellas:not(:checked) > label:hover ~ label {
+    color: #deb217; }
+  .estrellas > input:checked + label:hover,
+  .estrellas > input:checked + label:hover ~ label,
+  .estrellas > input:checked ~ label:hover,
+  .estrellas > input:checked ~ label:hover ~ label,
+  .estrellas > label:hover ~ input:checked ~ label {
+    color: #c59b08; }
+
+.estrellasDeshabilitadas {
+  display: inline-block; }
+  .estrellasDeshabilitadas:not(:checked) > input {
+    position: absolute;
+    top: -9999px; }
+  .estrellasDeshabilitadas:not(:checked) > label {
+    float: right;
+    width: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    color: #ccc;
+    font-size: 1.5em;
+    font-style: normal; }
+  .estrellasDeshabilitadas:not(:checked) > label:before {
+    content: '★ '; }
+  .estrellasDeshabilitadas > input:checked ~ label {
+    color: #ffc700; }
+
 footer {
   display: flex;
   padding: 3% 15%;
@@ -99,3 +274,97 @@ footer {
   footer h2 {
     font-size: 1.5em;
     font-weight: bold; }
+
+.redes {
+  display: flex;
+  margin-left: 10%;
+  align-items: center; }
+  .redes ul li:not(:first-child) {
+    padding-left: 1em; }
+
+@media screen and (max-width: 1140px) {
+  footer {
+    flex-direction: column;
+    justify-items: left; }
+  footer ul li {
+    padding: 0em 2em 0em 0em; }
+  footer p {
+    margin-bottom: 1%; }
+  iframe {
+    width: 350px;
+    height: 280px; }
+  .redes {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 0%; }
+  .cajaEstrellas {
+    margin-bottom: 3%; }
+  .cajaEstrellas section {
+    margin-right: 5%; } }
+
+@media screen and (max-width: 1022px) {
+  iframe {
+    height: 270px; }
+  .catalogo {
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 10%; }
+  .seccionInfo {
+    font-size: 1.5em; }
+  .cuerpo p {
+    font-size: 0.9em; }
+  .cajaEstrellas h3 {
+    font-size: 1.2em; }
+  .ubicacion {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: "ubicacion" "mapa" "contactos";
+    grid-column-gap: 3%;
+    margin-bottom: 5%;
+    padding: 0%; }
+  .ubicacion h3 {
+    font-size: 1.2em; }
+  .ubicacionDireccion {
+    padding: 0%; } }
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 1.5em; }
+  h3 {
+    font-size: 1.2em; }
+  a {
+    font-size: 0.8em; }
+  header {
+    padding: 1% 10%; }
+  form input {
+    width: 80%; }
+  form textarea {
+    width: 100%; }
+  .cajaEstrellas {
+    flex-direction: column; }
+  .boton {
+    margin-bottom: 5%; }
+  .seccionInfo {
+    font-size: 1.2em; }
+  .ubicacion p {
+    margin-bottom: 3%; } }
+
+@media screen and (max-width: 480px) {
+  a h3 {
+    font-size: 1.5em; }
+  h1 {
+    font-size: 1.5em; }
+  .mapa iframe {
+    width: 280px;
+    height: 250px; }
+  .catalogo {
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 30%; }
+  .contacto h3 {
+    font-size: 1em; } }
+
+@media screen and (max-width: 378px) {
+  h1 {
+    font-size: 1em; }
+  .mapa iframe {
+    width: 240px;
+    height: 200px; } }
