--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap');
+
 *{
     margin: 0%;
     padding: 0%;
@@ -15,12 +17,13 @@ ul{
     li{
         display: inline;
         list-style: $no;
-        padding: 0em 0em 0em 1.5em;
     }
 }
 
 a{
     text-decoration: $no;
+    color: $negro;
+    font-size: 1em;
 
     h3{
         font-size: 1em;
@@ -48,4 +51,49 @@ h3{
 p{
     text-decoration: $no;
     color: $negro;
+}
+
+.botones{
+    text-align: $centrado;
+    margin: 1%;
+
+    li{
+        display: inline-block;
+
+        a{
+            display: inline-block;
+            background-color: $gris;
+            padding: 2%;
+            width: 20px;
+            height: 20px;   
+            border-radius: 100%;
+        }
+    }
+}
+
+.cuerpo{
+    margin: 2% 15%;
+
+    h2{
+        animation-duration: 3s;
+    }
+}
+
+.boton{
+    padding: 1em 2em;
+    margin-top: 1%;
+    font-size: 1em;
+    border: 2px solid $oscuro;
+    border-radius: 0.5em;
+    background-color: $claroAcentuado;
+    color: $oscuro;
+    font-weight: $negrita;
+}
+
+.tituloCentrado{
+    text-align: $centrado;
+}
+
+.textoPaddingBottom{
+    padding: 0em 0em 1em 0em;
 }
