--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -5,5 +5,6 @@
 @import "sobreNosotros";
 @import "valoracion";
 @import "contacto";
+@import "estrellas.scss";
 @import "footer";
 @import "queries";
