--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 * {
   margin: 0%;
   padding: 0%;
@@ -7,13 +8,6 @@
 
 body {
   font-family: "Nunito"; }
-
-ul {
-  margin-left: 0%;
-  padding-left: 0%; }
-  ul li {
-    display: inline;
-    list-style: none; }
 
 a {
   text-decoration: none;
@@ -82,11 +76,21 @@ header {
   justify-content: space-between;
   align-items: center;
   height: auto;
-  padding: 1% 15%; }
+  padding: 0.5% 15%; }
+  header h1 {
+    font-family: "Satisfy";
+    font-size: 1.8em; }
   header a {
     font-weight: bold; }
   header a:hover {
     color: #B08074; }
+  header ul {
+    margin-left: 0%;
+    padding-left: 0%; }
+    header ul li {
+      display: inline;
+      list-style: none;
+      padding: 0em 0em 0em 1.5em; }
 
 .headerLogo {
   display: flex;
@@ -95,6 +99,8 @@ header {
 
 nav ul {
   margin-bottom: 0%; }
+  nav ul li {
+    font-weight: 100; }
 
 article a img {
   width: 100%;
@@ -185,6 +191,12 @@ iframe {
   padding-right: 5%; }
   .cajaEstrellas section {
     padding-right: 3%; }
+  .cajaEstrellas ul {
+    padding-left: 0%; }
+    .cajaEstrellas ul li {
+      display: inline;
+      list-style: none;
+      padding: 0em 0em 0em 1.5em; }
 
 .nombreCliente {
   font-weight: bold;
@@ -269,18 +281,33 @@ iframe {
 
 footer {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 3% 15%;
   background-color: #EBCFB8; }
   footer h2 {
-    font-size: 1.5em;
+    font-family: "Satisfy";
+    font-size: 1.8em;
     font-weight: bold; }
+
+.slogan {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .slogan h2 {
+    margin: 0%; }
+  .slogan p {
+    font-size: 0.9em; }
 
 .redes {
   display: flex;
-  margin-left: 10%;
-  align-items: center; }
-  .redes ul li:not(:first-child) {
-    padding-left: 1em; }
+  justify-content: center; }
+  .redes ul {
+    margin: 0%;
+    padding: 0%; }
+    .redes ul li {
+      display: inline;
+      list-style: none; }
 
 @media screen and (max-width: 1140px) {
   footer {
