--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -38,6 +38,16 @@ iframe{
     section{
         padding-right: 3%;
     }
+
+    ul{
+        padding-left: 0%;
+    
+        li{
+            display: inline;
+            list-style: $no;
+            padding: 0em 0em 0em 1.5em;
+        }
+    }
 }
 
 .nombreCliente{
