--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 *{
     margin: 0%;
@@ -8,16 +9,6 @@
 
 body{
     font-family: $fuente;
-}
-
-ul{
-    margin-left: 0%;
-    padding-left: 0%;
-
-    li{
-        display: inline;
-        list-style: $no;
-    }
 }
 
 a{
