--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,8 +3,9 @@ $blanco: #fff;
 $negro: #000;
 $gris: #ccc;
 $claro: #EBCFB8;
-$oscuro: #B08074; 
+$oscuro: #74554d; 
 $claroAcentuado: #ffefe2;
+$contraste: #292e33;
 
 //fuente
 $fuente: 'Nunito';
