--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,13 +2,23 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 3% 15%;
+    padding: 2% 15%;
     background-color: $claro;
 
     h2{
         font-family: $marca;
         font-size: 1.8em;
         font-weight: $negrita;
+    }
+
+    ul{
+        margin: 0%;
+        padding: 0%;
+        
+        li{
+            display: inline;
+            list-style: $no;
+        }
     }
 }
 
@@ -19,24 +29,68 @@ footer{
 
     h2{
         margin: 0%;
+        color: $contraste;
     }
 
     p{
         font-size: 0.9em;
+        font-weight: $negrita;
     }
 }
 
 .redes{
-    display: flex;
-    justify-content: center;
 
     ul{
-        margin: 0%;
-        padding: 0%;
+        display: flex;
+        justify-content: center;
         
-        li{
-            display: inline;
-            list-style: $no;
+        li:not(:first-child){
+            margin-left: 2%;
         }
+    }
+}
+
+.facebook {
+
+    & img:last-child{
+        display: none;
+    }
+
+    &:hover img:last-child{
+        display: block;
+    }
+
+    &:hover img:first-child{
+        display: none;
+    }
+}
+
+.instagram {
+
+    & img:last-child{
+        display: none;
+    }
+
+    &:hover img:last-child{
+        display: block;
+    }
+
+    &:hover img:first-child{
+        display: none;
+    }
+}
+
+.youtube {
+
+    & img:last-child{
+        display: none;
+    }
+
+    &:hover img:last-child{
+        display: block;
+    }
+
+    &:hover img:first-child{
+        display: none;
     }
 }
