--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -22,7 +22,7 @@ a{
 }
 
 h1{
-    color: $negro;
+    color: $contraste;
     font-family: $fuente;
     font-size: 2em;
     font-weight: $negrita;
@@ -44,24 +44,6 @@ p{
     color: $negro;
 }
 
-.botones{
-    text-align: $centrado;
-    margin: 1%;
-
-    li{
-        display: inline-block;
-
-        a{
-            display: inline-block;
-            background-color: $gris;
-            padding: 2%;
-            width: 20px;
-            height: 20px;   
-            border-radius: 100%;
-        }
-    }
-}
-
 .cuerpo{
     margin: 2% 15%;
 
@@ -71,14 +53,20 @@ p{
 }
 
 .boton{
-    padding: 1em 2em;
-    margin-top: 1%;
+    padding: 1% 2%;
     font-size: 1em;
-    border: 2px solid $oscuro;
-    border-radius: 0.5em;
-    background-color: $claroAcentuado;
-    color: $oscuro;
+    border: 1px solid $gris;
+    border-radius: 0.3em;
+    background-color: $blanco;
+    color: $negro;
     font-weight: $negrita;
+
+    &:hover{
+        border: 1px solid $oscuro;
+        background-color: $claroAcentuado;
+        color: $oscuro;
+        font-weight: $negrita;
+    }
 }
 
 .tituloCentrado{
