--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,6 +14,7 @@ header{
 
     a{
         font-weight: $negrita;
+        white-space: nowrap;
     }
 
     a:hover{
@@ -34,8 +35,13 @@ header{
 
 .headerLogo{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: $centrado;
+    width: 100%;
+
+    div{
+        margin-right: 3%;
+    }
 }
 
 nav{
