--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -137,7 +137,11 @@
 
     .catalogo{
         grid-template-columns: repeat(1, 1fr);
-        margin-bottom: 30%;
+        margin-bottom: 40%;
+
+        p{
+            font-size: 1.1em;
+        }
     }
 
     .contacto h3{
@@ -146,10 +150,6 @@
 }
 
 @media screen and (max-width: 378px) {
-
-    h1{
-        font-size: 1em;
-    }
 
     .mapa iframe{
         width: 240px;
