Mixins, extends y SEO

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -53,14 +53,8 @@ p{
 }
 
 .boton{
-    padding: 1% 2%;
-    font-size: 1em;
-    border: 1px solid $gris;
-    border-radius: 0.3em;
-    background-color: $blanco;
-    color: $negro;
-    font-weight: $negrita;
-
+    @include m_boton(1% 2%, 1em, 1px solid $gris, 0.3em, $blanco, $negro, $negrita);
+    
     &:hover{
         border: 1px solid $oscuro;
         background-color: $claroAcentuado;
@@ -75,4 +69,13 @@ p{
 
 .textoPaddingBottom{
     padding: 0em 0em 1em 0em;
+}
+
+.input{
+    font-family: $fuente;
+    font-size: 1em;
+    border: 1px solid $gris;
+    border-radius: 0.3em;
+    padding: 1%;
+    margin-bottom: 2%;
 }
