--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -60,6 +60,14 @@ p {
 .textoPaddingBottom {
   padding: 0em 0em 1em 0em; }
 
+.input, form input, form textarea {
+  font-family: "Nunito";
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 0.3em;
+  padding: 1%;
+  margin-bottom: 2%; }
+
 header {
   width: 100%;
   background-color: #EBCFB8;
@@ -157,22 +165,10 @@ aside ul li {
 form {
   margin: 1% 0% 5% 0%; }
   form input {
-    width: 60%;
-    padding: 1%;
-    margin-bottom: 2%;
-    font-family: "Nunito";
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 0.5em; }
+    width: 60%; }
   form textarea {
     width: 80%;
-    resize: none;
-    padding: 1%;
-    margin-bottom: 1%;
-    font-family: "Nunito";
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 0.5em; }
+    resize: none; }
 
 iframe {
   width: 100%;
