--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,24 +2,14 @@ form{
     margin: 1% 0% 5% 0%;
 
     input{
+        @extend .input;
         width: 60%;
-        padding: 1%;
-        margin-bottom: 2%;
-        font-family: $fuente;
-        font-size: 1em;
-        border: 1px solid $gris;
-        border-radius: 0.5em;
     }
 
     textarea{
+        @extend .input;
         width: 80%;
         resize: $no;
-        padding: 1%;
-        margin-bottom: 1%;
-        font-family: $fuente;
-        font-size: 1em;
-        border: 1px solid $gris;
-        border-radius: 0.5em;
     }
 }
 
