--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,13 +2,11 @@ form{
     margin: 1% 0% 5% 0%;
 
     input{
-        @extend .input;
-        width: 60%;
+        @include m_input(60%, $fuente, 1em, 1px solid $gris, 0.3em, 1%, 2%)
     }
 
     textarea{
-        @extend .input;
-        width: 80%;
+        @include m_input(80%, $fuente, 1em, 1px solid $gris, 0.3em, 1%, 2%);
         resize: $no;
     }
 }
@@ -59,8 +57,7 @@ iframe{
 }
 
 .contacto{
-    display: flex;
-    align-items: $centrado;
+    @extend .flexItemCentrado;
     margin-top: 3%;
     padding-right: 10%;    
 
