--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,9 +1,9 @@
-@mixin m_boton($padding, $font-size, $border, $border-radius, $background-color, $color, $font-weight){
-    padding: $padding;
+@mixin m_input ($width, $font-family, $font-size, $border, $border-radius, $padding, $margin-bottom){
+    width: $width;
+    font-family: $font-family;
     font-size: $font-size;
     border: $border;
     border-radius: $border-radius;
-    background-color: $background-color;
-    color: $color;
-    font-weight: $font-weight;
+    padding: $padding;
+    margin-bottom: $margin-bottom;
 }
