--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -12,19 +12,14 @@ article{
             font-size: 0.9em;
             font-style: $cursiva;
         }
-    }
 
-    h3{
-
-        :hover{
+        &:hover{
             color: $negro;
         }
-    }
 
-    p{
-
-        :hover{
-            color: $negro;
+        h4{
+            text-decoration: none;
+            font-size: 1.2em;
         }
     }
 }
