--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -42,12 +42,11 @@ p {
   border: 1px solid #ccc;
   border-radius: 0.3em;
   background-color: #fff;
-  color: #000;
-  font-weight: bold; }
+  color: #000; }
   .boton:hover {
     border: 1px solid #74554d;
-    background-color: #ffefe2;
-    color: #74554d;
+    background-color: #74554d;
+    color: #fff;
     font-weight: bold; }
 
 .tituloCentrado {
