--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -39,7 +39,7 @@ p {
 .boton {
   padding: 1% 2%;
   font-size: 1em;
-  border: 1px solid #ccc;
+  border: 1px solid #74554d;
   border-radius: 0.3em;
   background-color: #fff;
   color: #000; }
