--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -49,7 +49,7 @@ p{
 .boton{    
     padding: 1% 2%;
     font-size: 1em;
-    border: 1px solid $gris;
+    border: 1px solid $oscuro;
     border-radius: 0.3em;
     background-color: $blanco;
     color: $negro;
