--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -1,5 +1,4 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 * {
   margin: 0%;
@@ -7,110 +6,42 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Nunito"; }
+  font-family: "Poppins"; }
 
 a {
   text-decoration: none;
-  color: #000;
+  color: #000000;
   font-size: 1em; }
 
 h1 {
-  color: #292e33;
-  font-family: "Nunito";
-  font-size: 2em;
-  font-weight: bold;
-  margin-bottom: 0%; }
+  font-size: 22px;
+  font-weight: bold; }
 
 h2 {
-  font-size: 2em; }
+  font-size: 20px;
+  color: #4B4B4B; }
 
-h3 {
-  font-size: 1.5em;
-  color: #000; }
+input {
+  font-family: "Poppins"; }
 
-p {
-  color: #000; }
+.boton-nav {
+  border: 0px solid transparent;
+  border-bottom: 3px solid transparent;
+  background-color: transparent;
+  font-size: 14px;
+  font-family: "Poppins";
+  font-weight: bold; }
+  .boton-nav:hover {
+    border-bottom: 3px solid #74554D;
+    color: #74554D; }
 
-.cuerpo {
-  margin: 2% 15%; }
-  .cuerpo h2 {
-    animation-duration: 3s; }
-
-.boton {
-  padding: 1% 2%;
-  font-size: 1em;
-  border: 1px solid #74554d;
-  border-radius: 0.3em;
-  background-color: #fff;
-  color: #000; }
-  .boton:hover {
-    border: 1px solid #74554d;
-    background-color: #74554d;
-    color: #fff;
-    font-weight: bold; }
-
-.tituloCentrado {
-  text-align: center; }
-
-.textoPaddingBottom {
-  padding: 0em 0em 1em 0em; }
-
-.flexItemCentrado, header, .headerLogo, .contacto, .slogan {
+.nav-carrito {
+  width: 30%;
   display: flex;
-  align-items: center; }
+  justify-content: space-between; }
 
-.flexJustifyCentrado, footer, .redes ul {
-  display: flex;
-  justify-content: center; }
-
-header {
-  width: 100%;
-  background-color: #EBCFB8;
-  justify-content: space-between;
-  height: auto;
-  padding: 0.5% 15%; }
-  header h1 {
-    font-family: "Satisfy";
-    font-size: 1.8em; }
-  header a {
-    font-weight: bold;
-    white-space: nowrap; }
-  header a:hover {
-    color: #74554d; }
-  header ul {
-    margin-left: 0%;
-    padding-left: 0%; }
-    header ul li {
-      display: inline;
-      list-style: none;
-      padding: 0em 0em 0em 1.5em; }
-
-.headerLogo {
-  justify-content: flex-start;
-  width: 100%; }
-  .headerLogo div {
-    margin-right: 3%; }
-
-nav ul {
-  margin-bottom: 0%; }
-  nav ul li {
-    font-weight: 100; }
-
-article a img {
-  width: 100%;
-  border-radius: 5%;
-  margin-bottom: 5%; }
-
-article a p {
-  font-size: 0.9em;
-  font-style: italic; }
-
-article a:hover {
-  color: #000; }
-
-article a h4 {
-  text-decoration: none;
-  font-size: 1.2em; }
+.caja-subtitulo {
+  margin: 10px 10%; }
 
 .catalogo {
   display: grid;
@@ -118,161 +49,162 @@ article a h4 {
   grid-template-rows: 1fr;
   justify-items: center;
   gap: 2%;
-  margin: 3% 0% 2% 0%; }
+  margin: 25px 10% 150px 10%; }
 
-.recomendado {
-  color: #000;
-  background-color: #fff;
+.producto {
   width: 100%;
-  border: 1px solid #fff;
-  font-size: 1em;
-  padding-bottom: 3%;
-  border-bottom: 3px solid transparent;
-  animation-duration: 0.8s; }
-  .recomendado:hover {
-    border-bottom: 3px solid #74554d; }
-
-.seccionInfo {
-  display: flex;
-  font-size: 1.6em;
-  margin-bottom: 5%; }
-
-.centradoDerecha {
-  text-align: right;
-  padding-left: 10%; }
-
-.centradoIzquierda {
-  text-align: left;
-  padding-right: 10%; }
-
-.borde {
-  background-color: #74554d;
-  width: 5%; }
-
-aside ul li {
-  padding: 0em; }
-  aside ul li p {
-    margin-bottom: 0%; }
-
-form {
-  margin: 1% 0% 5% 0%; }
-  form input {
-    width: 60%;
-    font-family: "Nunito";
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 0.3em;
-    padding: 1%;
-    margin-bottom: 2%; }
-  form textarea {
-    width: 80%;
-    font-family: "Nunito";
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 0.3em;
-    padding: 1%;
-    margin-bottom: 2%;
-    resize: none; }
-
-iframe {
-  width: 100%;
-  height: 100%;
+  position: relative;
+  padding-bottom: 30px;
   border: 1px solid #EBCFB8;
-  margin-bottom: 5%; }
+  border-radius: 10px; }
 
-.cajaEstrellas {
-  display: flex;
-  flex-direction: row;
-  padding-right: 5%; }
-  .cajaEstrellas section {
-    padding-right: 3%; }
-  .cajaEstrellas ul {
-    padding-left: 0%; }
-    .cajaEstrellas ul li {
-      display: inline;
-      list-style: none;
-      padding: 0em 0em 0em 1.5em; }
+.imagen-producto {
+  width: 100%;
+  height: 70%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px; }
 
-.nombreCliente {
+.info-producto {
+  height: 30%;
+  padding-left: 10px; }
+  .info-producto:hover .comprar {
+    opacity: 1; }
+
+.nombre-producto {
+  height: 50%; }
+
+.precio-producto {
+  height: 25%; }
+
+.detalle-producto {
+  height: 25%;
+  font-size: 14px;
+  color: #4B4B4B; }
+
+.comprar {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 35%;
+  width: 100%;
+  background: #EBCFB8;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border: 1px solid transparent;
+  color: #000000;
+  font-size: 24px;
   font-weight: bold;
-  font-style: normal; }
+  font-family: "Poppins"; }
 
-.ubicacion {
-  display: grid;
-  grid-template-areas: "ubicacion mapa" "contactos mapa";
-  grid-template-columns: 60% 40%;
-  margin-bottom: 5%; }
+.titulo {
+  margin-top: 10px;
+  font-size: 20px;
+  text-align: center; }
 
-.ubicacionDireccion {
-  padding-right: 10%; }
-
-.contacto {
-  margin-top: 3%;
-  padding-right: 10%; }
-  .contacto p {
-    margin-bottom: 0%;
-    padding-left: 3%; }
-
-.contactos {
-  grid-area: contactos;
+.flexItemCentrado, header, .headerLogo, .slogan {
   display: flex;
-  flex-direction: column;
-  margin-top: 3%;
-  padding-right: 10%; }
-  .contactos h3 {
-    font-size: 1.2em; }
+  align-items: center; }
 
-.mapa {
-  grid-area: mapa; }
+.flexJustifyCentrado, footer, .redes ul {
+  display: flex;
+  justify-content: center; }
 
-.estrellas {
-  display: inline-block;
-  margin-top: 1%; }
-  .estrellas:not(:checked) > input {
-    position: absolute;
-    top: -9999px; }
-  .estrellas:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 1.5em;
-    color: #ccc; }
-  .estrellas:not(:checked) > label:before {
-    content: '★ '; }
-  .estrellas > input:checked ~ label {
-    color: #ffc700; }
-  .estrellas:not(:checked) > label:hover,
-  .estrellas:not(:checked) > label:hover ~ label {
-    color: #deb217; }
-  .estrellas > input:checked + label:hover,
-  .estrellas > input:checked + label:hover ~ label,
-  .estrellas > input:checked ~ label:hover,
-  .estrellas > input:checked ~ label:hover ~ label,
-  .estrellas > label:hover ~ input:checked ~ label {
-    color: #c59b08; }
+.carrito {
+  margin: 0% 10%;
+  padding: 25px;
+  border: 1px solid #EBCFB8;
+  border-radius: 10px; }
+  .carrito ul {
+    list-style: none; }
+    .carrito ul li {
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between; }
+      .carrito ul li:last-child {
+        margin-bottom: 0px; }
 
-.estrellasDeshabilitadas {
-  display: inline-block; }
-  .estrellasDeshabilitadas:not(:checked) > input {
-    position: absolute;
-    top: -9999px; }
-  .estrellasDeshabilitadas:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    color: #ccc;
-    font-size: 1.5em;
-    font-style: normal; }
-  .estrellasDeshabilitadas:not(:checked) > label:before {
-    content: '★ '; }
-  .estrellasDeshabilitadas > input:checked ~ label {
-    color: #ffc700; }
+.caja-boton-input {
+  margin: 15px 10% 20px 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.direccion {
+  width: 50%;
+  height: max-content;
+  padding-left: 5px;
+  border: 1px solid #CCCCCC;
+  border-radius: 5px;
+  font-size: 14px; }
+
+.boton-confirmar {
+  padding: 10px 15px;
+  min-width: 180px;
+  font-size: 14px;
+  border: 1px solid #EBCFB8;
+  border-radius: 10px;
+  background-color: transparent; }
+  .boton-confirmar:hover {
+    border-color: #4D9C3B;
+    background-color: #4D9C3B;
+    color: #FFFFFF; }
+
+.boton-limpiar {
+  padding: 10px 15px;
+  min-width: 180px;
+  font-size: 14px;
+  border: 1px solid #EBCFB8;
+  border-radius: 10px;
+  background-color: transparent; }
+  .boton-limpiar:hover {
+    border-color: #AAAAAA;
+    background-color: #AAAAAA;
+    color: #000000; }
+
+.producto-carrito {
+  width: 50%; }
+
+.cantidad {
+  width: 10%;
+  text-align: center; }
+  .cantidad input {
+    width: 100%;
+    padding-left: 5px;
+    border-radius: 5px;
+    border: 1px solid #CCCCCC;
+    font-size: 14px; }
+
+.importe {
+  width: 35%;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
+
+header {
+  width: 100%;
+  background-color: #EBCFB8;
+  justify-content: space-between;
+  height: auto;
+  padding: 0.5% 10%; }
+  header h1 {
+    font-family: "Satisfy";
+    font-size: 1.8em; }
+  header a {
+    font-weight: bold;
+    white-space: nowrap; }
+
+.headerLogo {
+  justify-content: flex-start;
+  width: 100%; }
+  .headerLogo div {
+    margin-right: 10px; }
 
 footer {
+  /* position: absolute;
+    bottom: 0; */
+  width: 100%;
   flex-direction: column;
   padding: 2% 15%;
   background-color: #EBCFB8; }
@@ -291,7 +223,7 @@ footer {
   flex-direction: column; }
   .slogan h2 {
     margin: 0%;
-    color: #292e33; }
+    color: #4B4B4B; }
   .slogan p {
     font-size: 0.9em;
     font-weight: bold; }
@@ -325,90 +257,3 @@ footer {
 
 .youtube:hover img:first-child {
   display: none; }
-
-@media screen and (max-width: 1140px) {
-  footer {
-    flex-direction: column;
-    justify-items: left; }
-  footer ul li {
-    padding: 0em 2em 0em 0em; }
-  footer p {
-    margin-bottom: 1%; }
-  iframe {
-    width: 350px;
-    height: 280px; }
-  .redes {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 0%; }
-  .cajaEstrellas {
-    margin-bottom: 3%; }
-  .cajaEstrellas section {
-    margin-right: 5%; } }
-
-@media screen and (max-width: 1022px) {
-  iframe {
-    height: 270px; }
-  .catalogo {
-    grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 10%; }
-  .seccionInfo {
-    font-size: 1.5em; }
-  .cuerpo p {
-    font-size: 0.9em; }
-  .cajaEstrellas h3 {
-    font-size: 1.2em; }
-  .ubicacion {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas: "ubicacion" "mapa" "contactos";
-    grid-column-gap: 3%;
-    margin-bottom: 5%;
-    padding: 0%; }
-  .ubicacion h3 {
-    font-size: 1.2em; }
-  .ubicacionDireccion {
-    padding: 0%; } }
-
-@media screen and (max-width: 768px) {
-  h2 {
-    font-size: 1.8em; }
-  h3 {
-    font-size: 1.5em; }
-  header {
-    padding: 1% 10%; }
-  form input {
-    width: 80%; }
-  form textarea {
-    width: 100%; }
-  .cajaEstrellas {
-    flex-direction: column; }
-  .boton {
-    margin-bottom: 5%; }
-  .seccionInfo {
-    font-size: 1.2em; }
-  .nav-item a {
-    font-size: 1em; }
-  .cuerpo p {
-    font-size: 1em; } }
-
-@media screen and (max-width: 480px) {
-  a h3 {
-    font-size: 1.5em; }
-  h1 {
-    font-size: 1.5em; }
-  iframe {
-    width: 280px;
-    height: 250px; }
-  .catalogo {
-    grid-template-columns: repeat(1, 1fr);
-    margin-bottom: 40%; }
-    .catalogo p {
-      font-size: 1.1em; }
-  .contacto h3 {
-    font-size: 1em; } }
-
-@media screen and (max-width: 378px) {
-  .mapa iframe {
-    width: 240px;
-    height: 200px; } }
