--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 *{
@@ -18,56 +18,112 @@ a{
 }
 
 h1{
-    color: $contraste;
-    font-family: $fuente;
-    font-size: 2em;
+    font-size: 22px;
     font-weight: $negrita;
-    margin-bottom: 0%;
 }
 
 h2{
-    font-size: 2em;
+    font-size: 20px;
+    color: $contraste;
 }
 
-h3{
-    font-size: 1.5em;
-    color: $negro;
+input{
+    font-family: $fuente;
 }
 
-p{
-    color: $negro;
-}
-
-.cuerpo{
-    margin: 2% 15%;
-
-    h2{
-        animation-duration: 3s;
-    }
-}
-
-.boton{    
-    padding: 1% 2%;
-    font-size: 1em;
-    border: 1px solid $oscuro;
-    border-radius: 0.3em;
-    background-color: $blanco;
-    color: $negro;
+.boton-nav{
+    border: 0px solid transparent;
+    border-bottom: 3px solid transparent;
+    background-color: transparent;
+    font-size: 14px;
+    font-family: $fuente;
+    font-weight: $negrita;
 
     &:hover{
-        border: 1px solid $oscuro;
-        background-color: $oscuro;
-        color: $blanco;
-        font-weight: $negrita;
+        border-bottom: 3px solid $oscuro;
+        color: $oscuro;
     }
 }
 
-.tituloCentrado{
-    text-align: $centrado;
+.nav-carrito{
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.textoPaddingBottom{
-    padding: 0em 0em 1em 0em;
+.caja-subtitulo{
+    margin: 10px 10%;
+}
+
+.catalogo{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    justify-items: center;
+    gap: 2%;
+    margin: 25px 10% 150px 10%;
+}
+
+.producto{
+    width: 100%;
+    position: relative;
+    padding-bottom: 30px;
+    border: 1px solid $claro;
+    border-radius: 10px;
+}
+
+.imagen-producto{
+    width: 100%;
+    height: 70%;    
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.info-producto{
+    height: 30%;
+    padding-left: 10px;
+
+    &:hover .comprar{
+        opacity: 1;
+    }
+}
+
+.nombre-producto{
+    height: 50%;
+}
+
+.precio-producto{
+    height: 25%;
+}
+
+.detalle-producto{
+    height: 25%;
+    font-size: 14px;
+    color: $contraste;
+}
+
+.comprar{
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 35%;
+    width: 100%;
+    background: $claro;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid transparent;
+    color: $negro;
+    font-size: 24px;
+    font-weight: $negrita;
+    font-family: $fuente;
+}
+
+.titulo{
+    margin-top: 10px;
+    font-size: 20px;
+    text-align: $centrado;
 }
 
 .flexItemCentrado{
@@ -79,3 +135,97 @@ p{
     display: flex;
     justify-content: $centrado;
 }
+
+//carrito.html
+
+.carrito{
+    margin: 0% 10%;
+    padding: 25px;
+    border: 1px solid $claro;
+    border-radius: 10px;
+
+    ul{
+        list-style: none;
+
+        li{
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+
+            &:last-child{
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
+
+.caja-boton-input{
+    margin: 15px 10% 20px 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.direccion{
+    width: 50%;
+    height: max-content;
+    padding-left: 5px;
+    border: 1px solid $gris;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.boton-confirmar{
+    padding: 10px 15px;
+    min-width: 180px;
+    font-size: 14px;
+    border: 1px solid $claro;
+    border-radius: 10px;
+    background-color: transparent;
+
+    &:hover{
+        border-color: $ok;
+        background-color: $ok;
+        color: $blanco;
+    }
+}
+
+.boton-limpiar{
+    padding: 10px 15px;
+    min-width: 180px;
+    font-size: 14px;
+    border: 1px solid $claro;
+    border-radius: 10px;
+    background-color: transparent;
+
+    &:hover{
+        border-color: $limpiar;
+        background-color: $limpiar;
+        color: $negro;
+    }
+}
+
+.producto-carrito{
+    width: 50%;
+}
+
+.cantidad{
+    width: 10%;
+    text-align: center;
+
+    input{
+        width: 100%;
+        padding-left: 5px;
+        border-radius: 5px;
+        border: 1px solid $gris;
+        font-size: 14px;
+    }
+}
+
+.importe{
+    width: 35%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
