--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,7 @@ header{
     background-color: $claro;
     justify-content: space-between;
     height: auto;
-    padding: 0.5% 15%;
+    padding: 0.5% 10%;
 
     h1{
         font-family: $marca;
@@ -15,21 +15,6 @@ header{
         font-weight: $negrita;
         white-space: nowrap;
     }
-
-    a:hover{
-        color: $oscuro;
-    }
-
-    ul{
-        margin-left: 0%;
-        padding-left: 0%;
-    
-        li{
-            display: inline;
-            list-style: $no;
-            padding: 0em 0em 0em 1.5em;
-        }
-    }
 }
 
 .headerLogo{
@@ -38,17 +23,6 @@ header{
     width: 100%;
 
     div{
-        margin-right: 3%;
-    }
-}
-
-nav{
-    
-    ul{
-        margin-bottom: 0%;
-
-        li{
-            font-weight: 100;
-        }
+        margin-right: 10px;
     }
 }
