--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,14 +1,15 @@
 //colores
-$blanco: #fff;
-$negro: #000;
-$gris: #ccc;
+$blanco: #FFFFFF;
+$negro: #000000;
 $claro: #EBCFB8;
-$oscuro: #74554d; 
-$claroAcentuado: #ffefe2;
-$contraste: #292e33;
+$oscuro: #74554D; 
+$contraste: #4B4B4B;
+$gris: #CCCCCC;
+$ok: #4D9C3B;
+$limpiar: #AAAAAA;
 
 //fuente
-$fuente: 'Nunito';
+$fuente: 'Poppins';
 $marca: 'Satisfy';
 
 //estilos de fuentes
